--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "nuxt": "^3.3.1"
   },
   "dependencies": {
@@ -15,6 +16,7 @@
     "@vueuse/nuxt": "^9.13.0",
     "daisyui": "^2.51.5",
     "nanoid": "^4.0.1",
-    "openai": "^3.2.1"
+    "openai": "^3.2.1",
+    "vue3-markdown-it": "^1.0.10"
   }
 }
