--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "nuxt": "^3.3.1"
+    "nuxt": "^3.3.0",
+    "rollup": "3.18.0"
   },
   "dependencies": {
     "@nuxtjs/tailwindcss": "^6.6.4",
